[gd_scene load_steps=2 format=3 uid="uid://c8j2k3l4m5n6"]

[ext_resource type="Script" path="res://scripts/CardUI.gd" id="1_cardui"]

[node name="CardUI" type="PanelContainer"]
custom_minimum_size = Vector2(120, 160)
offset_right = 120.0
offset_bottom = 160.0
script = ExtResource("1_cardui")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Title"
horizontal_alignment = 1

[node name="DiscardButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
text = "X"

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Type"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1